@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3550 utf-8
+personal_ws-1.1 en 3552 utf-8
 AAC
 AAS
 ABI
@@ -3028,7 +3028,9 @@ sendline
 sendmail
 sendsignal
 sendsignalfn
+sendsignalfnaliases
 sendsignalpid
+sendsignalpidaliases
 senoidal
 sequentialized
 ser
