@@ -40,7 +40,8 @@ https://github.com/networkupstools/nut/milestone/12
    to patterns defined in link:docs/nut-names.txt[]
 
  - common code:
-   * extended with plural `checkprocnames()` and `compareprocnames()` for
+   * extended with plural `checkprocnames()` and `compareprocnames()`,
+     as well as `sendsignalpidaliases()` and `sendsignalfnaliases()`, for
      binaries that expect to have one of several names at the moment (e.g.
      when renaming a program to "*-old" or promoting a "*-new" into the
      stable name as a default implementation). [PR #3101]
